# telemoji

./: LICENSE  README.md  pyproject.toml
telemoji/: __init__.py
utils/: update_readme_emoji_list.py
